# neumann-cockpit

./: .gitignore  .mise.toml  .plumber.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO_TESTS.md  config.example.toml  release-please-config.json  renovate.json  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  label.yml  release-please.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/automation/: headless.md  index.md  queue.md  scripting.md
docs/src/cockpit/: actions.md  display.md  grid.md  index.md  panes.md
docs/src/getting-started/: configuration.md  first-run.md  index.md  installation.md
docs/src/project/: architecture.md
docs/src/reference/: configuration.md  index.md  keybindings.md
scratchpad/: i1.txt  i2.txt  j-pr2.txt  j-pr3-doc.txt  j-pr3.txt  j1.txt  j2.txt  j3.txt  msg1.txt  msg2.txt  msg3.txt  msg4.txt  msg5.txt  n1.txt  n2.txt  pr-body.txt  pr-idle.txt  pr-naming.txt  pr-shiplog.txt  pr-shiplog2.txt  pr-shiplog3.txt  roadmap.html
src/: app.rs  config.rs  headless.rs  input.rs  lib.rs  main.rs  notify.rs  preflight.rs  store.rs
src/api/: client.rs  metrics.rs  mod.rs  tasks.rs  types.rs
src/app/: anim.rs  boot.rs  color.rs  command.rs  containers.rs  grid.rs  inputs.rs  inventory.rs  journal.rs  lexicon.rs  mannies.rs  map.rs  message.rs  mod.rs  mode.rs  queue.rs  scan.rs  script.rs  telemetry.rs  tests.rs  travel.rs  tree.rs  waypoints.rs
src/input/: alerts.rs  assemble.rs  cockpit.rs  command.rs  containers.rs  craft.rs  fleet.rs  geometry.rs  improve.rs  jettison.rs  map.rs  messages.rs  mine.rs  missions.rs  mod.rs  pickers.rs  queue.rs  repair.rs  scanner.rs  script.rs  storage_move.rs  travel.rs  tree.rs
src/ui/: cockpit.rs  cockpit_v2.rs  mod.rs  preflight.rs  sigil.rs  tests.rs  theme.rs
src/ui/cockpit_v2/: grid.rs  menu.rs  mod.rs  palette.rs  panes.rs
src/ui/overlays/: alerts.rs  assemble.rs  containers.rs  craft.rs  drop_container.rs  fleet.rs  help.rs  improve.rs  inventory_detail.rs  jettison.rs  map.rs  messages.rs  mine.rs  missions.rs  mod.rs  object_actions.rs  pickers.rs  queue.rs  remote_mine.rs  repair.rs  scanner.rs  script.rs  scut_network.rs  storage_move.rs  travel.rs  tree.rs  waypoints.rs
src/ui/panels/: inventory.rs  mannies.rs  mod.rs  probe.rs  scanner.rs
src/ui/retro/: banner.rs  boot.rs  drones.rs  mod.rs  palette.rs  radar.rs  systems.rs  tests.rs  ticker.rs
tests/: serde_types.rs
