[package]
name = "neumann-cockpit"
version = "63.1.1"
edition = "2021"
license  = "GPL-3.0-only"

[dependencies]
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
crossterm   = { version = "0.28", features = ["event-stream"] }
directories = "5"
futures     = "0.3"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui     = "0.29"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
toml        = "0.8"

[dev-dependencies]
pretty_assertions = "1"
