[package]
name = "neumann-cockpit"
version = "63.3.1"
edition = "2021"
license  = "GPL-3.0-only"
description = "A keyboard-first terminal cockpit for the Von Neumann probe game."
repository = "https://github.com/MagiCrazy/neumann-cockpit"
# Minimum supported Rust: uses u64::is_multiple_of (stable since 1.87).
rust-version = "1.87"

[dependencies]
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
crossterm   = { version = "0.28", features = ["event-stream"] }
directories = "5"
futures     = "0.3"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ratatui     = "0.29"
rusqlite    = { version = "0.32", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
toml        = "0.8"

[dev-dependencies]
pretty_assertions = "1"
