[package]
name = "neumann-cockpit"
version = "71.0.0"
edition = "2021"
license  = "GPL-3.0-only"
description = "A keyboard-first terminal cockpit for the Von Neumann probe game."
repository = "https://github.com/MagiCrazy/neumann-cockpit"
# Minimum supported Rust: bumped to 1.88 by ratatui 0.30 (also covers
# u64::is_multiple_of, stable since 1.87).
rust-version = "1.88"

[dependencies]
anyhow      = "1"
chrono      = { version = "0.4", features = ["serde"] }
crossterm   = { version = "0.29", features = ["event-stream"] }
directories = "6"
futures     = "0.3"
reqwest     = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
ratatui     = "0.30"
rusqlite    = { version = "0.40", features = ["bundled"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
toml        = "1.0"

[dev-dependencies]
pretty_assertions = "1"
